<resources>
    <string name="app_name">WhatsApp</string>
    <string name="digite_seu_nome">Digite seu Nome</string>
    <string name="cod_pais">+55</string>
    <string name="mod_fone">99999-9999</string>
    <string name="password">Digite sua senha</string>
    <string name="cod_area">(81)</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="validacao">Validação</string>
    <string name="text_validacao">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo</string>
    <string name="bt_validar">Validar</string>
    <string name="digite_o_codigo">Digite o código</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se.</string>
    <string name="digite_seu_email">Digite seu E-mail</string>
    <string name="bt_logar">Fazer Login</string>
    <string name="item_sair">Sair</string>
    <string name="item_configuracao">Configuracao</string>
    <string name="item_pesquisa">Pesquisa</string>
    <string name="item_adicionar">Adicionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
