<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_configuracao"
        android:title="@string/item_configuracao"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/item_pesquisa"
        android:title="@string/item_pesquisa"
        android:orderInCategory="200" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search" />

    <item
        android:id="@+id/item_adicionar"
        android:title="@string/item_adicionar"
        android:orderInCategory="300" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add" />

    <item
        android:id="@+id/item_sair"
        android:title="@string/item_sair"
        android:orderInCategory="400" app:showAsAction="never" />

</menu>