<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.weslleymendonca.whatsapp.activity.ValidacaoActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="163dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/validacao"
        android:textColor="@color/textColorPrimay"
        android:textSize="@dimen/Titulos" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/text_validacao"
        android:textColor="@color/textColorPrimay"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/codValidacao_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/digite_o_codigo"
        android:inputType="number"
        android:textColor="@color/textColorPrimay" />

    <Button
        android:id="@+id/btValidar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/codValidacao_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/bt_validar"
        android:textColor="@color/textColorPrimay" />

</RelativeLayout>
