<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.weslleymendonca.whatsapp.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="163dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/emailLogin_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="43dp"
        android:gravity="center_horizontal"
        android:hint="@string/digite_seu_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColorPrimay" />

    <EditText
        android:id="@+id/senhaLogin_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textColorPrimay"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btLogar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/senhaLogin_id"
        android:layout_marginTop="47dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/bt_logar"
        android:textColor="@color/textColorPrimay" />

    <TextView
        android:id="@+id/naoTemConta_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btLogar_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="abrirCadastroUsuario"
        android:text="@string/nao_tem_conta"
        android:textColor="@color/textColorPrimay" />

</RelativeLayout>
