<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.weslleymendonca.whatsapp.activity.CadastroUsuarioActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/usuario"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/cadNome_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cadSenha_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/cadNome_id"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/cadEmail_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cadNome_id"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/digite_seu_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btCadastrar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cadSenha_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/bt_cadastrar"
        android:textColor="@color/textColorPrimay" />
</RelativeLayout>
